--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./Aelita/fonts/fonts.css">
 		<link rel="stylesheet" href="./Aelita/css/style.css" />
 		<title>Portfolio</title>
 	</head>
@@ -15,7 +16,9 @@
 						<div class="container">
 							<div class="header__inner">
 								<div class="header__logo">
-									<a href="#"><img src="./Aelita/img/logo.svg" alt="" /></a>
+									<a href="#">
+										<h1>Aelita<span>J</span></h1>
+									</a>
 								</div>
 								<nav class="header__nav">
 									<ul class="nav__item">
@@ -40,11 +43,8 @@
 									who really believes in big and light future
 								</p>
 							</div>
-							<div class="author__imgs">
-								<img
-									src="./Aelita/img/codepicture.png"
-									alt=""
-									class="author__img" />
+							<div class="author__img">
+								<img src="./Aelita/img/Aelita.png" alt="" />
 							</div>
 						</div>
 					</div>
@@ -115,7 +115,7 @@
 									<button>See more</button>
 								</div>
 								<div>
-									<img src="./Aelita/img/site.png" alt="">
+									<img src="./Aelita/img/site.png" alt="" />
 								</div>
 								<div class="box">
 									<p class="title">News Blog</p>
@@ -134,5 +134,9 @@
 				</section>
 			</main>
 		</div>
+
+		<script
+			src="https://kit.fontawesome.com/cb3098e1fc.js"
+			crossorigin="anonymous"></script>
 	</body>
 </html>
