--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./Aelita/fonts/fonts.css">
+		<link rel="stylesheet" href="./Aelita/fonts/fonts.css" />
 		<link rel="stylesheet" href="./Aelita/css/style.css" />
 		<title>Portfolio</title>
 	</head>
@@ -133,10 +133,47 @@
 					</div>
 				</section>
 			</main>
-		</div>
 
-		<script
-			src="https://kit.fontawesome.com/cb3098e1fc.js"
-			crossorigin="anonymous"></script>
+			<footer class="footer">
+				<div class="container">
+					<div class="content">
+						<div class="left">
+							<div class="header__logo">
+								<a href="#">
+									<h1>Aelita<span>J</span></h1>
+								</a>
+							</div>
+							<p class="text">
+								If you liked my work and you need me, I'm ready to talk to you.
+							</p>
+						</div>
+						<div class="right">
+							<p class="info">Сontacts</p>
+							<div class="contact">
+								<div class="first">
+									<a
+										class="link email"
+										href="mailto:nyc.aelita@gmail.com"
+										target="_blank"
+										>nyc.aelita@gmail.com</a
+									>
+									<a class="link git" href="https://github.com/AelitaJva"
+										>AelitaJva</a
+									>
+								</div>
+								<div class="second">
+									<a class="link insta" href="#">ael_litta</a>
+									<a
+										class="link figma"
+										href="https://www.figma.com/files/user/1165703943244130740?fuid=1165703943244130740"
+										>Aelita</a
+									>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</footer>
+		</div>
 	</body>
 </html>
