--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 		</div>
 		<script src="./Aelita/js/jquery-3.6.1.min.js"></script>
 		<script src="./Aelita/js/particles.min.js"></script>
-		<script src="./Aelita/js/settings.particle.js"></script>
+		<!-- <script src="./Aelita/js/settings.particle.js"></script> -->
 		<script src="./Aelita/js/typed.min.js"></script>
 		<script src="./Aelita/js/script.js"></script>
 	</body>
