--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
 								</div>
 								<nav class="header__nav">
 									<ul class="nav__item">
-										<a data-scroll="#about" href="#"><li class="nav__link">about me</li></a>
-										<a data-scroll="#skills" href="#"><li class="nav__link">Skills</li></a>
+										<a data-scroll="#about" href="#"
+											><li class="nav__link">about me</li></a
+										>
+										<a data-scroll="#skills" href="#"
+											><li class="nav__link">Skills</li></a
+										>
 										<a data-scroll="#projects" href="#"
 											><li class="nav__link">projects</li></a
 										>
-										<a data-scroll="#contacts" href="#"><li class="nav__link">contacts</li></a>
+										<a data-scroll="#contacts" href="#"
+											><li class="nav__link">contacts</li></a
+										>
 									</ul>
 								</nav>
 							</div>
@@ -61,8 +67,9 @@
 						<div class="content">
 							<img src="./Aelita/img/logo2.svg" alt="" />
 							<p>
-								A few months ago, I became interested in developing websites. Since then, I have been steadily improving my
-								skills. Now I am developing websites to order or for myself.
+								A few months ago, I became interested in developing websites.
+								Since then, I have been steadily improving my skills. Now I am
+								developing websites to order or for myself.
 							</p>
 						</div>
 					</div>
